--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Monique's Portfolio</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./assets/style.css">
 </head>
 
 <body>
@@ -22,7 +23,7 @@
         </a>
 
         <!-- <div class="collapse navbar-collapse" id="navbarTogglerDemo02"> -->
-        <ul class="navbar-nav mt-2 mt-md-0">
+        <ul class="navbar-nav mt-2 mt-md-0 nbar">
           <li class="nav-item active">
             <a class="nav-link" href="#!">About
               <span class="sr-only">(current)</span> | </a>
@@ -41,8 +42,10 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-sm-8">
-        <h1>About Me</h1>
+      <div class="col-md-8">
+        <h2>About Me</h2>
+
+        <img class="mainphoto" src="./assets/images/IMG_1868.jpg" alt="Monique Robinson">
         <p>
           My name is Monique Robinson. I am a full stack developer that can build a website for you utilizing front end and back end
           tools. I make sure that your website is beautiful and functional and will keep your customers engaged.
@@ -58,22 +61,22 @@
           When I am not coding I love to listen to 90s music, travel to new parts of the world, watch crime shows and cook delicious
           food.
       </div>
-      <div class="col-sm-4">
+      <div class="col-md-4 socialBox">
         <h3>
           Connect with Me
         </h3>
         <div class="row">
-          <div class="col-sm-4">
+          <div class="col-md-4">
             <a href="https://github.com/morobins">
               <img src="./assets/images/github_logo_64.png" alt="github logo">
             </a>
           </div>
-          <div class="col-sm-4">
+          <div class="col-md-4">
             <a href="https://stackoverflow.com/users/9064688/monique-robinson">
               <img src="./assets/images/stackoverflow_logo_64.png" alt="stack overflow logo">
             </a>
           </div>
-          <div class="col-sm-4">
+          <div class="col-md-4">
             <a href="https://www.linkedin.com/in/moniquedrobinson/">
               <img src="./assets/images/linkedin_logo_64.png" alt="linkedIn logo">
           </div>
@@ -82,8 +85,8 @@
       </div>
     </div>
   </div>
-  <nav class="navbar fixed-bottom navbar-light bg-light">
-      <a class="navbar-brand" href="#">Monique</a>
+  <nav class="navbar fixed-bottom navbar-light bg-light footerMain">
+      <p class="navbar-brand">&#169 Copyright 2018 Monique</p>
     </nav>
   </div>
 
