--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light nbar">
       <div class="container">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
           aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,15 +25,15 @@
         <!-- <div class="collapse navbar-collapse" id="navbarTogglerDemo02"> -->
         <ul class="navbar-nav mt-2 mt-md-0 nbar">
           <li class="nav-item active">
-            <a class="nav-link" href="#!">About
+            <a class="nav-link" href="index.html">About
               <span class="sr-only">(current)</span> | </a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#!">Portfolio
+            <a class="nav-link" href="portfolio.html">Portfolio
               <span class="sr-only">(current)</span> | </a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#!">Contact
+            <a class="nav-link" href="contact.html">Contact
               <span class="sr-only">(current)</span>
             </a>
           </li>
@@ -43,25 +43,29 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8">
-        <h2>About Me</h2>
+        <div class="card">
+          <div class="card-body">
+            <h2>About Me</h2>
 
-        <img class="mainphoto" src="./assets/images/IMG_1868.jpg" alt="Monique Robinson">
-        <p>
-          My name is Monique Robinson. I am a full stack developer that can build a website for you utilizing front end and back end
-          tools. I make sure that your website is beautiful and functional and will keep your customers engaged.
-        </p>
+            <img class="mainphoto" src="./assets/images/IMG_1868.jpg" alt="Monique Robinson">
+            <p>
+              My name is Monique Robinson. I am a full stack developer that can build a website for you utilizing front end and back end
+              tools. I make sure that your website is beautiful and functional and will keep your customers engaged.
+            </p>
 
-        <p>
-          I have a background in marketing and public relations so I am able to utilize those skills and apply them to amplifying the
-          website you present to your clients. Explore my page to see examples of how I have taken my clients' businesses
-          to the next level!
-        </p>
+            <p>
+              I have a background in marketing and public relations so I am able to utilize those skills and apply them to amplifying the
+              website you present to your clients. Explore my page to see examples of how I have taken my clients' businesses
+              to the next level!
+            </p>
 
-        <p>
-          When I am not coding I love to listen to 90s music, travel to new parts of the world, watch crime shows and cook delicious
-          food.
+            <p>
+              When I am not coding I love to listen to 90s music, travel to new parts of the world, watch crime shows and cook delicious
+              food.
+          </div>
+        </div>
       </div>
-      <div class="col-md-4 socialBox">
+      <div class="col-md-4 card">
         <h3>
           Connect with Me
         </h3>
@@ -79,15 +83,17 @@
           <div class="col-md-4">
             <a href="https://www.linkedin.com/in/moniquedrobinson/">
               <img src="./assets/images/linkedin_logo_64.png" alt="linkedIn logo">
+            </a>
           </div>
-          </a>
         </div>
       </div>
     </div>
   </div>
+  </div>
+  </div>
   <nav class="navbar fixed-bottom navbar-light bg-light footerMain">
-      <p class="navbar-brand">&#169 Copyright 2018 Monique</p>
-    </nav>
+    <p class="navbar-brand">&#169 Copyright 2018 Monique</p>
+  </nav>
   </div>
 
 </body>
