--- a/portfolio.html
+++ b/portfolio.html
@@ -25,16 +25,16 @@
         <!-- <div class="collapse navbar-collapse" id="navbarTogglerDemo02"> -->
         <ul class="navbar-nav mt-2 mt-md-0 nbar">
           <li class="nav-item active">
-            <a class="nav-link" href="#!">About
-              <span class="sr-only">(current)</span> | </a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#!">Portfolio
-              <span class="sr-only">(current)</span> | </a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#!">Contact
-              <span class="sr-only">(current)</span>
+              <a class="nav-link" href="index.html">About
+                  <span class="sr-only">(current)</span> | </a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="portfolio.html">Portfolio
+                  <span class="sr-only">(current)</span> | </a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="contact.html">Contact
+                  <span class="sr-only">(current)</span>
             </a>
           </li>
         </ul>
