--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
   </div>
   </div>
   </div>
-  <nav class="navbar fixed-bottom navbar-light bg-light footerMain">
-    <p class="navbar-brand">&#169 Copyright 2018 Monique</p>
+  <nav class="navbar fixed-bottom footerMain">
+    <p class="navbar">&#169 Copyright 2018 Monique</p>
   </nav>
   </div>
 
