--- a/contact.html
+++ b/contact.html
@@ -45,20 +45,20 @@
       <div class="col-md-8">
         <div class="card">
           <div class="card-body">
-              <form>
-                  <div class="form-group">
-                    <label for="formGroupExampleInput">Name</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="John Smith">
-                  </div>
-                  <div class="form-group">
-                    <label for="formGroupExampleInput2">Email</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="email@gmail.com">
+            <form>
+                <div class="form-group">
+                  <label for="formGroupExampleInput">Name</label>
+                  <input type="text" class="form-control" id="formGroupExampleInput" placeholder="John Smith">
+                </div>
+                <div class="form-group">
+                  <label for="formGroupExampleInput2">Email</label>
+                  <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="email@gmail.com">
                   <div class="form-group message">
                     <label for="formGroupExampleInput2">Message</label>
                     <input type="text" class="form-control" id="formGroupExampleInput2">
                   </div>
                   <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
+              </form>
           </div>
         </div>
       </div>
@@ -88,8 +88,8 @@
   </div>
   </div>
   </div>
-  <nav class="navbar fixed-bottom navbar-light bg-light footerMain">
-    <p class="navbar-brand">&#169 Copyright 2018 Monique</p>
+  <nav class="navbar fixed-bottom footerMain">
+    <p class="navbar">&#169 Copyright 2018 Monique</p>
   </nav>
   </div>
 
