--- a/portfolio.html
+++ b/portfolio.html
@@ -12,42 +12,51 @@
 
 <body>
   <div>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light nbar">
       <div class="container">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
           aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" href="#!">
-          <h1>Monique</h1>
+          <h1>Portfolio</h1>
         </a>
 
         <!-- <div class="collapse navbar-collapse" id="navbarTogglerDemo02"> -->
         <ul class="navbar-nav mt-2 mt-md-0 nbar">
           <li class="nav-item active">
-              <a class="nav-link" href="index.html">About
-                  <span class="sr-only">(current)</span> | </a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="portfolio.html">Portfolio
-                  <span class="sr-only">(current)</span> | </a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="contact.html">Contact
-                  <span class="sr-only">(current)</span>
+            <a class="nav-link" href="index.html">About
+              <span class="sr-only">(current)</span> | </a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="portfolio.html">Portfolio
+              <span class="sr-only">(current)</span> | </a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="contact.html">Contact
+              <span class="sr-only">(current)</span>
             </a>
           </li>
         </ul>
       </div>
+      </nav>
   </div>
   <div class="container">
     <div class="row">
       <div class="col-md-8">
-        <h2>Portfolio</h2>
-
-      
+        <div class="card">
+          <div class="card-body">
+            <h2>Portfolio</h2>
+            <img src="./assets/images/arch_200_200.jpg" class="rounded float-left" alt="...">
+            <img src="./assets/images/book_200_200.jpg" class="rounded float-right" alt="...">
+            <img src="./assets/images/dog_200_200.jpg" class="rounded float-left" alt="...">
+            <img src="./assets/images/nature_200_200.jpg" class="rounded float-right" alt="...">
+            <img src="./assets/images/tech_200_200.jpg" class="rounded float-left" alt="...">
+            <img src="./assets/images/arch_200_200.jpg" class="rounded float-right" alt="...">
+          </div>
+        </div>
       </div>
-      <div class="col-md-4 socialBox">
+      <div class="col-md-4 card">
         <h3>
           Connect with Me
         </h3>
@@ -65,15 +74,17 @@
           <div class="col-md-4">
             <a href="https://www.linkedin.com/in/moniquedrobinson/">
               <img src="./assets/images/linkedin_logo_64.png" alt="linkedIn logo">
+            </a>
           </div>
-          </a>
         </div>
       </div>
     </div>
   </div>
-  <nav class="navbar fixed-bottom navbar-light bg-light footerMain">
-      <p class="navbar-brand">&#169 Copyright 2018 Monique</p>
-    </nav>
+  </div>
+  </div>
+  <nav class="navbar fixed-bottom footerMain">
+    <p class="navbar">&#169 Copyright 2018 Monique</p>
+  </nav>
   </div>
 
 </body>
