fixed contact page

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" href="#!">
-          <h1>Portfolio</h1>
+          <h1>Monique</h1>
         </a>
 
         <!-- <div class="collapse navbar-collapse" id="navbarTogglerDemo02"> -->
