--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,7 @@
                 <div class="form-group">
                   <label for="formGroupExampleInput2">Email</label>
                   <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="email@gmail.com">
+                </div>
                   <div class="form-group message">
                     <label for="formGroupExampleInput2">Message</label>
                     <input type="text" class="form-control" id="formGroupExampleInput2">
@@ -86,12 +87,12 @@
       </div>
     </div>
   </div>
-  </div>
-  </div>
+  <!-- </div>
+  </div> -->
   <nav class="navbar fixed-bottom footerMain">
     <p class="navbar">&#169 Copyright 2018 Monique</p>
   </nav>
-  </div>
+  <!-- </div> -->
 
 </body>
 
