fixed footer and connect with me box

--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4 card">
+      <div class="col-md-4 card connect">
         <h3>
           Connect with Me
         </h3>
@@ -90,7 +90,7 @@
   <!-- </div>
   </div> -->
   <nav class="navbar fixed-bottom footerMain">
-    <p class="navbar">&#169 Copyright 2018 Monique</p>
+    <a class="navbar">&#169 Copyright 2018 Monique</a>
   </nav>
   <!-- </div> -->
 
