--- a/portfolio.html
+++ b/portfolio.html
@@ -47,16 +47,16 @@
         <div class="card">
           <div class="card-body">
             <h2>Portfolio</h2>
-            <img src="./assets/images/arch_200_200.jpg" class="rounded float-left" alt="...">
-            <img src="./assets/images/book_200_200.jpg" class="rounded float-right" alt="...">
-            <img src="./assets/images/dog_200_200.jpg" class="rounded float-left" alt="...">
-            <img src="./assets/images/nature_200_200.jpg" class="rounded float-right" alt="...">
-            <img src="./assets/images/tech_200_200.jpg" class="rounded float-left" alt="...">
-            <img src="./assets/images/arch_200_200.jpg" class="rounded float-right" alt="...">
+            <img src="./assets/images/arch_200_200.jpg" class="rounded" alt="...">
+            <img src="./assets/images/book_200_200.jpg" class="rounded" alt="...">
+            <img src="./assets/images/dog_200_200.jpg" class="rounded" alt="...">
+            <img src="./assets/images/nature_200_200.jpg" class="rounded" alt="...">
+            <img src="./assets/images/tech_200_200.jpg" class="rounded" alt="...">
+            <img src="./assets/images/arch_200_200.jpg" class="rounded" alt="...">
           </div>
         </div>
       </div>
-      <div class="col-md-4 card">
+      <div class="col-md-4 card connect">
         <h3>
           Connect with Me
         </h3>
@@ -83,7 +83,7 @@
   </div>
   </div>
   <nav class="navbar fixed-bottom footerMain">
-    <p class="navbar">&#169 Copyright 2018 Monique</p>
+    <a class="navbar">&#169 Copyright 2018 Monique</a>
   </nav>
   </div>
 
