Had fun with styling

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Monique's Portfolio</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
   <link rel="stylesheet" href="./assets/style.css">
 </head>
 
@@ -18,26 +19,17 @@
           aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#!">
-          <h1>Monique</h1>
-        </a>
+        <header>
+          <h1>Monique Robinson</h1>
+        </header>
+        <ul class="snip1217">
+            <li><a href="index.html">About</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
 
         <!-- <div class="collapse navbar-collapse" id="navbarTogglerDemo02"> -->
-        <ul class="navbar-nav mt-2 mt-md-0 nbar">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">About
-              <span class="sr-only">(current)</span> | </a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="portfolio.html">Portfolio
-              <span class="sr-only">(current)</span> | </a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="contact.html">Contact
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-        </ul>
+        <!-- s -->
       </div>
   </div>
   <div class="container">
