updated portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,12 +53,20 @@
         <div class="card">
           <div class="card-body">
             <h2>Portfolio</h2>
-            <img src="./assets/images/arch_200_200.jpg" class="rounded" alt="...">
-            <img src="./assets/images/book_200_200.jpg" class="rounded" alt="...">
-            <img src="./assets/images/dog_200_200.jpg" class="rounded" alt="...">
-            <img src="./assets/images/nature_200_200.jpg" class="rounded" alt="...">
-            <img src="./assets/images/tech_200_200.jpg" class="rounded" alt="...">
-            <img src="./assets/images/arch_200_200.jpg" class="rounded" alt="...">
+            <a href="https://morobins.github.io/Psychic-Game/">
+            <img src="./assets/images/psychicgame.jpg" class="rounded" alt="...">
+          </a>
+          <a href="https://morobins.github.io/week-4-game/">
+            <img src="./assets/images/crystalsgame.jpg" class="rounded" alt="...">
+          </a>
+          <a href="https://morobins.github.io/TriviaGame/">
+            <img src="./assets/images/triviagame.jpg" class="rounded" alt="...">
+          </a>
+          <a href="https://morobins.github.io/Giphy/">
+            <img src="./assets/images/giphy.jpg" class="rounded" alt="...">
+          </a>
+            <img src="./assets/images/comingsoon.jpg" class="rounded" alt="...">
+            <img src="./assets/images/comingsoon.jpg" class="rounded" alt="...">
           </div>
         </div>
       </div>
