Fixed portfolio images

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,19 +54,19 @@
           <div class="card-body">
             <h2>Portfolio</h2>
             <a href="https://morobins.github.io/Psychic-Game/">
-            <img src="./assets/images/psychicgame.jpg" class="rounded" alt="...">
+            <img src="./assets/images/PsychicGame.jpg" class="rounded" alt="...">
           </a>
           <a href="https://morobins.github.io/week-4-game/">
-            <img src="./assets/images/crystalsgame.jpg" class="rounded" alt="...">
+            <img src="./assets/images/CrystalsGame.jpg" class="rounded" alt="...">
           </a>
           <a href="https://morobins.github.io/TriviaGame/">
-            <img src="./assets/images/triviagame.jpg" class="rounded" alt="...">
+            <img src="./assets/images/TriviaGame.jpg" class="rounded" alt="...">
           </a>
           <a href="https://morobins.github.io/Giphy/">
-            <img src="./assets/images/giphy.jpg" class="rounded" alt="...">
+            <img src="./assets/images/Giphy.jpg" class="rounded" alt="...">
           </a>
-            <img src="./assets/images/comingsoon.jpg" class="rounded" alt="...">
-            <img src="./assets/images/comingsoon.jpg" class="rounded" alt="...">
+            <img src="./assets/images/ComingSoon.jpg" class="rounded" alt="...">
+            <img src="./assets/images/ComingSoon.jpg" class="rounded" alt="...">
           </div>
         </div>
       </div>
