added train homework

--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,9 @@
           <a href="https://morobins.github.io/Giphy/">
             <img src="./assets/images/Giphy.jpg" class="rounded" alt="...">
           </a>
+          <a href="https://morobins.github.io/chooChoo/">
             <img src="./assets/images/ComingSoon.jpg" class="rounded" alt="...">
+          </a>
             <img src="./assets/images/ComingSoon.jpg" class="rounded" alt="...">
           </div>
         </div>
