added train to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
             <img src="./assets/images/Giphy.jpg" class="rounded" alt="...">
           </a>
           <a href="https://morobins.github.io/chooChoo/">
-            <img src="./assets/images/ComingSoon.jpg" class="rounded" alt="...">
+            <img src="./assets/images/chooChoo.jpg" class="rounded" alt="...">
           </a>
             <img src="./assets/images/ComingSoon.jpg" class="rounded" alt="...">
           </div>
